<resources>
    <string name="app_name">Medical Point</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="alamat"><b>\u0020\u0020Alamat</b></string>
    <string name="telepon"><b>\u0020\u0020Telepon</b></string>
    <string name="hubungi">Hubungi</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="bagikan">Bagikan</string>
    <string name="komentar">Komentar</string>
    <string name="tidak_ada_data">Tidak Ada Data</string>
</resources>
