<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    tools:context=".fragment.FLocation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/home"
            android:text="@string/alamat"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alamat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone_number"
            android:text="@string/telepon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <ImageButton
            android:id="@+id/ib_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hubungi"
            android:src="@drawable/phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <ImageButton
            android:id="@+id/ib_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/petunjuk"
            android:src="@drawable/map"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical1"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical2"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bagikan"
            android:src="@drawable/share"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical2"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical3"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <ImageButton
            android:id="@+id/ib_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/komentar"
            android:src="@drawable/star"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>